test/errors/value/int/tochar2.yasl


echo (-1)->tochar()

